Added DDG search box

--- a/index.html
+++ b/index.html
@@ -10,45 +10,50 @@
     <header>
       <h1>Hello, Dean.</h1>
     </header>
-        <div id="wrapper">
-            <div class="card" id="email">
-              <h3>Email</h3>
-              <ul>
-                <li><a href="https://inbox.google.com/">Inbox</a></li>
-                <li><a href="https://outlook.live.com/owa/?path=/mail/inbox">Outlook</a></li>
-                <li><a href="https://mail.google.com/mail/u/1/#inbox">DCU Mail</a></li>
-              </ul>
-            </div>
-
-            <div class="card" id="social">
-              <h3>Social</h3>
-              <ul>
-                <li><a href="https://www.facebook.com/">Facebook</a></li>
-                <li><a href="https://www.messenger.com/t/437517606437596">Messenger</a></li>
-                <li><a href="https://twitter.com/">Twitter</a></li>
-                <li><a href="https://www.instagram.com/">Instagram</a></li>
-              </ul>
-            </div>
-
-            <div class="card" id="dcu">
-              <h3>DCU</h3>
-              <ul>
-                <li><a href="https://loop.dcu.ie/my/">loop</a></li>
-                <li><a href="http://toodle.computing.dcu.ie/moodle/">twodal</a></li>
-                <li><a href="https://www101.dcu.ie/timetables/feed.php?prog=CASE&per=2&week1=1&week2=12&hour=1-20&template=student">Timetable</a></li>
-              </ul>
-            </div>
-
-            <div class="card" id="general">
-              <h3>General</h3>
-              <ul>
-                <li><a href="https://www.reddit.com/">reddit</a></li>
-                <li><a href="https://play.spotify.com/browse">Spotify</a></li>
-                <li><a href="http://www.youtube.com">YouTube</a></li>
-                <li><a href="https://fantasy.premierleague.com/a/team/my">Fantasy PL</a></li>
-                <li><a href="https://www.github.com">GitHub</a></li>
-              </ul>
-            </div>
+    
+    <div id="search">
+        <iframe src="https://duckduckgo.com/search.html?prefill=Search &bgcolor=3E3E3E&focus=yes" style="overflow:hidden;margin:0;padding:0;width:408px;height:40px;" frameborder="0"></iframe>
+    </div>
+    
+    <div id="wrapper">
+        <div class="card" id="email">
+          <h3>Email</h3>
+          <ul>
+            <li><a href="https://inbox.google.com/">Inbox</a></li>
+            <li><a href="https://outlook.live.com/owa/?path=/mail/inbox">Outlook</a></li>
+            <li><a href="https://mail.google.com/mail/u/1/#inbox">DCU Mail</a></li>
+          </ul>
         </div>
+
+        <div class="card" id="social">
+          <h3>Social</h3>
+          <ul>
+            <li><a href="https://www.facebook.com/">Facebook</a></li>
+            <li><a href="https://www.messenger.com/t/437517606437596">Messenger</a></li>
+            <li><a href="https://twitter.com/">Twitter</a></li>
+            <li><a href="https://www.instagram.com/">Instagram</a></li>
+          </ul>
+        </div>
+
+        <div class="card" id="dcu">
+          <h3>DCU</h3>
+          <ul>
+            <li><a href="https://loop.dcu.ie/my/">loop</a></li>
+            <li><a href="http://toodle.computing.dcu.ie/moodle/">twodal</a></li>
+            <li><a href="https://www101.dcu.ie/timetables/feed.php?prog=CASE&per=2&week1=1&week2=12&hour=1-20&template=student">Timetable</a></li>
+          </ul>
+        </div>
+
+        <div class="card" id="general">
+          <h3>General</h3>
+          <ul>
+            <li><a href="https://www.reddit.com/">reddit</a></li>
+            <li><a href="https://play.spotify.com/browse">Spotify</a></li>
+            <li><a href="http://www.youtube.com">YouTube</a></li>
+            <li><a href="https://fantasy.premierleague.com/a/team/my">Fantasy PL</a></li>
+            <li><a href="https://www.github.com">GitHub</a></li>
+          </ul>
+        </div>
+    </div>
   </body>
 </html>
