--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="css/stylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400" rel="stylesheet">
@@ -10,11 +10,11 @@
     <header>
       <h1>Hello, Dean.</h1>
     </header>
-    
-    <div id="search">
-        <iframe src="https://duckduckgo.com/search.html?prefill=Search &bgcolor=3E3E3E&focus=yes" style="overflow:hidden;margin:0;padding:0;width:408px;height:40px;" frameborder="0"></iframe>
-    </div>
-    
+
+    <form id="search" method="get" action="http://www.google.com/search">
+            <input id="searchbox" name="q" type="search" placeholder="Search Google">
+    </form>
+
     <div id="wrapper">
         <div class="card" id="email">
           <h3>Email</h3>
