--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Hello, Dean.</h1>
+      <h1>Home</h1>
     </header>
 
     <form id="search" method="get" action="http://www.google.com/search">
